--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,113 @@
 body{
-    background: rgb(41, 38, 38);
+    background: rgb(48, 47, 47);
     color: white;
 }
 img{
-    width: 25%;
+    width: 411px;
+    height: 428px;
+}
+h1{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 1px 1px;
+}
+nav{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    padding-top: 1rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    
+}
+nav>ul{
+    list-style: none;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(2,57,166,1) 35%, rgba(5,32,158,1) 58%, rgba(0,0,0,1) 100%);
+    border-radius: 1rem;
+    
+}
+nav>ul>li{
+    display: inline-block;
+    padding: 15px 68px;
+    cursor: pointer;
+}
+nav>ul>li>a{
+    color: white;
+    text-decoration: none !important;
+    font-weight: bold !important;
+    padding: 1rem 2rem;
+}
+nav>ul>li>a:hover{
+    color: rgb(211, 0, 0) !important;
+}
+
+
+article{
+    border: 0.75rem solid rgb(0, 0, 0);
+    margin: 0.5rem;
+    height: 520px;
+    overflow: hidden;
+    background: linear-gradient(90deg, rgba(33,32,32,1) 0%, rgba(120,120,120,1) 49%, rgba(48,47,47,1) 100%);
+}
+h2{
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(2,57,166,1) 35%, rgba(5,32,158,1) 58%, rgba(0,0,0,1) 100%);
+    color: white;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    margin: 0;
+    font-weight: bold;
+    padding: 0.5rem;
+    text-align: center;
+    padding-left:  0.24rem;
+}
+h3{
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 5px 0.5rem;
+}
+#info{
+    display: flex;
+    grid-auto-flow: column;
+    padding: 5px 5px;
+    flex-shrink: 2;
+}
+#res{
+    width: 400px;
+    height: 350px;
+    padding: 5px 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    letter-spacing: 2px;
+    font-size: 1.5rem;
+}
+p>strong{
+    font-size: 2.2rem;
+    
+}
+#res~p{
+    height: 300px;
+    width: 250px;
+    padding: 5px 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 1.3rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 39px;
+}
+.boton{
+    text-align: center;
+}
+.boton>button{
+    width: 100px;
+    height: 30px;
+}
+
+#footer{
+    background-color: #1e086e; 
+            color: white; 
+            text-align: center;
+            
+            position: relative; 
+            bottom: 0px;
+            width: 100%; 
 }
