--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ nav>ul>li>a:hover{
 article{
     border: 0.75rem solid rgb(0, 0, 0);
     margin: 0.5rem;
-    height: 520px;
+    height: 545px;
     overflow: hidden;
     background: linear-gradient(90deg, rgba(33,32,32,1) 0%, rgba(120,120,120,1) 49%, rgba(48,47,47,1) 100%);
 }
@@ -96,18 +96,31 @@ p>strong{
 }
 .boton{
     text-align: center;
+    
+    position: relative;
 }
 .boton>button{
     width: 100px;
-    height: 30px;
+    height: 50px;
+    background: black !important;
+    
+}
+.boton>button>a{
+    color: white;
+    text-decoration: none !important;
+    font-size: 2rem;
+}
+.boton>button>a:hover{
+    color: red;
+    background: blue !important;
+    
 }
 
 #footer{
-    background-color: #1e086e; 
-            color: white; 
-            text-align: center;
-            
-            position: relative; 
-            bottom: 0px;
-            width: 100%; 
+    background-color: #000000; 
+    color: white; 
+    text-align: center;
+    position: relative; 
+    bottom: 0px;
+    width: 100%; 
 }
