--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     background: rgb(48, 47, 47);
     color: white;
@@ -15,20 +19,21 @@ nav{
     margin: 0;
     display: flex;
     align-items: center;
-    padding-top: 1rem;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding: 1rem 10%;
     
 }
 nav>ul{
     list-style: none;
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(2,57,166,1) 35%, rgba(5,32,158,1) 58%, rgba(0,0,0,1) 100%);
     border-radius: 1rem;
+    padding-left: 0px;
+    width: 100%;
+    text-align: center;
     
 }
 nav>ul>li{
     display: inline-block;
-    padding: 15px 68px;
+    padding: 15px 50px;
     cursor: pointer;
 }
 nav>ul>li>a{
@@ -40,12 +45,14 @@ nav>ul>li>a{
 nav>ul>li>a:hover{
     color: rgb(211, 0, 0) !important;
 }
-
+main{
+    margin: 8px;
+}
 
 article{
     border: 0.75rem solid rgb(0, 0, 0);
     margin: 0.5rem;
-    height: 545px;
+    height: 1220px;
     overflow: hidden;
     background: linear-gradient(90deg, rgba(33,32,32,1) 0%, rgba(120,120,120,1) 49%, rgba(48,47,47,1) 100%);
 }
@@ -85,7 +92,7 @@ p>strong{
     
 }
 #res~p{
-    height: 300px;
+    height: 350px;
     width: 250px;
     padding: 5px 25px;
     overflow: hidden;
@@ -94,33 +101,23 @@ p>strong{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     line-height: 39px;
 }
-.boton{
-    text-align: center;
-    
+#vid{
+    width: 100%;
     position: relative;
+    text-align: center;
 }
-.boton>button{
-    width: 100px;
-    height: 50px;
-    background: black !important;
-    
+#vid>video{
+    width: 1080px;
+    height: 720px;
 }
-.boton>button>a{
-    color: white;
-    text-decoration: none !important;
-    font-size: 2rem;
-}
-.boton>button>a:hover{
-    color: red;
-    background: blue !important;
-    
-}
+
 
 #footer{
     background-color: #000000; 
     color: white; 
     text-align: center;
     position: relative; 
-    bottom: 0px;
-    width: 100%; 
+    bottom: 0;
+    width: 100%;
+    position: relative;  
 }
